fixed after header p to align center

--- a/Projects/portfolio/style.css
+++ b/Projects/portfolio/style.css
@@ -115,7 +115,7 @@ main h2 {
     margin: .6rem;
 }
 
-main section p {
+main article p {
     text-align: justify;
 }
 
